<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.tlz.shipper"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/main_padding" >

        <com.tlz.shipper.ui.widget.EditTextBarIconTitleClearText
            android:id="@+id/waybill_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:icon_right_background="@drawable/icon_clear_text"
            app:left_text="@string/waybill_weight"
            app:right_hint="@string/waybill_weight_hint" />

        <com.tlz.shipper.ui.widget.EditTextBarIconTitleClearText
            android:id="@+id/waybill_volume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:icon_right_background="@drawable/icon_clear_text"
            app:left_text="@string/waybill_volume"
            app:right_hint="@string/waybill_volume_hint" />

        <com.tlz.shipper.ui.widget.EditTextBarIconTitleClearText
            android:id="@+id/waybill_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:icon_right_background="@drawable/icon_clear_text"
            app:left_text="@string/waybill_quantity"
            app:right_hint="@string/waybill_quantity_hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/waybill_btn_save"
                style="@style/MTextViewBtn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/waybill_weight_btn_save" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>