<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.tlz.shipper"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
         android:padding="@dimen/main_padding" >

        <com.tlz.shipper.ui.widget.TextViewBarIcon
            android:id="@+id/complete_enterprise_info_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon_right_width="50dp"
            app:icon_right_height="50dp"
            app:left_text="@string/complete_enterprise_info_logo" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <com.tlz.shipper.ui.widget.TextViewBarPure
            android:id="@+id/complete_enterprise_info_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/grey"
            app:left_text="@string/complete_enterprise_info_tip" />

        <com.tlz.shipper.ui.widget.TextViewBarPure
            android:id="@+id/complete_enterprise_info_simple_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:left_text="@string/complete_enterprise_info_simple_name"
            app:right_text="@string/complete_enterprise_info_default" />

        <com.tlz.shipper.ui.widget.TextViewBarPure
            android:id="@+id/complete_enterprise_info_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:left_text="@string/complete_enterprise_info_full_name"
            app:right_text="@string/complete_enterprise_info_default" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <com.tlz.shipper.ui.widget.TextViewBarIcon
            android:id="@+id/complete_enterprise_info_qr_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon_right_width="15dp"
            app:icon_right_height="15dp"
            app:icon_right_drawable="@drawable/qr_code"
            app:left_text="@string/complete_enterprise_info_qr_code" />

        <com.tlz.shipper.ui.widget.TextViewBarPure
            android:id="@+id/complete_enterprise_info_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:left_text="@string/complete_enterprise_info_phone_number"
            app:right_text="@string/complete_enterprise_info_default" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <com.tlz.shipper.ui.widget.TextViewBarPure
            android:id="@+id/complete_enterprise_info_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:left_text="@string/complete_enterprise_info_contact"
            app:right_text="@string/complete_enterprise_info_default" />

        <com.tlz.shipper.ui.widget.TextViewBarPure
            android:id="@+id/complete_enterprise_info_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:left_text="@string/complete_enterprise_info_location"
            app:right_text="@string/complete_enterprise_info_default" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <com.tlz.shipper.ui.widget.TextViewBarPure
            android:id="@+id/complete_enterprise_info_detail_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:left_text="@string/complete_enterprise_info_detail_address"
            app:right_text="@string/complete_enterprise_info_default" />

        <com.tlz.shipper.ui.widget.TextViewBarPure
            android:id="@+id/complete_enterprise_info_qualifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:left_text="@string/complete_enterprise_info_qualifications"
            app:right_text="@string/complete_enterprise_info_default" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <com.tlz.shipper.ui.widget.TextViewBarPure
            android:id="@+id/complete_enterprise_info_cargo_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:left_text="@string/complete_enterprise_info_cargo_type"
            app:right_text="@string/complete_enterprise_info_default" />

        <com.tlz.shipper.ui.widget.TextViewBarPure
            android:id="@+id/complete_enterprise_info_introduction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:left_text="@string/complete_enterprise_info_introduction"
            app:right_text="@string/complete_enterprise_info_default" />
    </LinearLayout>

</ScrollView>